--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -1,6 +1,7 @@
 body { 
     margin: 0; 
-    font-family: Arial, sans-serif; background: #212e3f; 
+    font-family: Arial, sans-serif; 
+    background: #212e3f; 
     color: #e6edf3; 
     }
     .app { 
@@ -11,7 +12,7 @@ body {
     
     .header { 
     padding: 16px; 
-    border-bottom: 1px solid #1b2634; 
+    border-bottom: 1px solid  #1b2634; 
     }
     
     .header h1 { 
