--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@ body {
     background: #212e3f; 
     color: #e6edf3; 
     }
+
+
     .app { 
     min-height: 100vh; 
     display: flex; 
@@ -12,7 +14,7 @@ body {
     
     .header { 
     padding: 16px; 
-    border-bottom: 1px solid  #1b2634; 
+    border-bottom: 1px solid  #245eac; 
     }
     
     .header h1 { 
@@ -29,9 +31,13 @@ body {
     display: flex; 
     gap: 10px; 
     padding: 12px 16px; 
-    border-bottom: 1px solid #1b2634; 
+    border-bottom: 1px solid #435f85; 
     }
     
+    .link button:hover {
+        background-color: #162d66;
+        transform: scale(1.03);
+      }
     .link { 
     padding: 8px 10px; 
     border-radius: 10px; 
@@ -42,7 +48,7 @@ body {
     
     .link.active { 
     font-weight: bold; 
-    outline: 2px solid #243b55; 
+    outline: 2px solid #8d50d3; 
     }
     
     .conteudo-principal { 
@@ -103,7 +109,7 @@ body {
     border-radius: 12px; 
     border: 1px solid #1b2634; 
     background: #0b0f14; 
-    color: #e6edf3; 
+    color: #82888d; 
     }
     
     .row { 
@@ -136,3 +142,13 @@ body {
     color: #9fb2c8; 
     text-align: center;
      }
+
+     .descricao{ 
+        display: flex; 
+        justify-content: space-between; 
+        align-items: center; gap: 12px;
+        padding: 12px; 
+        background: #0f1723; 
+        border: 1px solid #1b2634; 
+        border-radius: 14px;
+        }
